# zcg-aws-project

./: README.md  app.py  pyproject.toml
tests/unit/: test_zcg_aws_project_stack.py
zcg_aws_project/: zcg_aws_project_stack.py
